# python-project-49

./: README.md  makefile  pyproject.toml
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc_logic.py  even_logic.py  games_logic.py  gcd_logic.py  prime_logic.py  progression_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  question.py
