[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Репозиторий для первого проекта hexlet"
authors = ["Vitalii Sagirov <bitalko15@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/SagirovVitaliy/python-project-49"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
asciinema = "^2.4.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.games.brain_games:main"
brain-even = "brain_games.games.brain_even:main"
brain-calc = "brain_games.games.brain_calc:main"
brain-gcd = "brain_games.games.brain_gcd:main"
brain-progression = "brain_games.games.brain_progression:main"
brain-prime = "brain_games.games.brain_prime:main"